[gd_scene load_steps=6 format=3 uid="uid://cj8eyu2cvvtn0"]

[ext_resource type="Script" path="res://scenes/Main Menu.gd" id="1_j8nud"]
[ext_resource type="AudioStream" uid="uid://cee7f1hu1c73v" path="res://Assets/music/menu/The Endless.mp3" id="2_yge6o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dgkoi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2og6t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1qqlg"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_j8nud")

[node name="background" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12355.0
offset_top = -7847.0
offset_right = -11852.0
offset_bottom = -7549.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(50, 50)
color = Color(0, 0, 0, 1)

[node name="Menu_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_yge6o")
bus = &"Music"

[node name="Start_Layer" type="CanvasLayer" parent="."]

[node name="Start_Game" type="Button" parent="Start_Layer"]
offset_left = 520.0
offset_top = 379.0
offset_right = 637.0
offset_bottom = 415.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_dgkoi")
text = "Start Game
"
flat = true

[node name="Options" type="Button" parent="Start_Layer"]
offset_left = 520.0
offset_top = 435.0
offset_right = 637.0
offset_bottom = 471.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_2og6t")
text = "Options
"
flat = true

[node name="Achievments" type="Button" parent="Start_Layer"]
offset_left = 512.0
offset_top = 491.0
offset_right = 645.0
offset_bottom = 527.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_1qqlg")
text = "Achievments
"
flat = true

[node name="exit" type="Button" parent="Start_Layer"]
offset_left = 512.0
offset_top = 545.0
offset_right = 645.0
offset_bottom = 581.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_1qqlg")
text = "Exit Game"
flat = true

[node name="Achievments" type="CanvasLayer" parent="."]
visible = false

[connection signal="pressed" from="Start_Layer/Start_Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Start_Layer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Start_Layer/exit" to="." method="_on_exit_pressed"]
